test: LadderGameTest를 위한 세팅 방법 변경
- 전략 패턴에서 이전 Point와 비교하는 조건문 분리